[gd_scene load_steps=33 format=4 uid="uid://cgrvwgwhwhf3w"]

[ext_resource type="Script" uid="uid://d1iuv3nsbtetu" path="res://scripts/game_manager.gd" id="1_3l61x"]
[ext_resource type="Texture2D" uid="uid://m682hf33k8cg" path="res://assets/tiles.png" id="2_88iny"]
[ext_resource type="Script" uid="uid://c20uir8y6xcqr" path="res://scripts/primary_camera.gd" id="3_mh8xb"]
[ext_resource type="PackedScene" uid="uid://cg3rm2flhfpjd" path="res://scenes/player.tscn" id="4_86c2d"]
[ext_resource type="Script" uid="uid://bgbq615x14ap8" path="res://scripts/screen_effect.gd" id="5_utaye"]
[ext_resource type="Shader" uid="uid://pnyslxfthsec" path="res://assets/shaders/crt_effect.gdshader" id="6_y6vwp"]
[ext_resource type="Script" uid="uid://dioobaqa3cvnp" path="res://scripts/dialogue_intro.gd" id="7_5sxh6"]
[ext_resource type="AudioStream" uid="uid://d0kh41a8q5iq6" path="res://assets/sfx/dialogue.wav" id="8_oqkbv"]
[ext_resource type="LabelSettings" uid="uid://dcnyhvwtegtw8" path="res://assets/diaogue_style.tres" id="9_0h4it"]
[ext_resource type="PackedScene" uid="uid://btsr3q5aeg5pf" path="res://scenes/door.tscn" id="10_shsup"]
[ext_resource type="Script" uid="uid://crie64r7nk41k" path="res://scripts/secret_control.gd" id="11_0rpx2"]
[ext_resource type="Texture2D" uid="uid://dc2y5p0lwiwpl" path="res://assets/her.png" id="12_88iny"]
[ext_resource type="Script" uid="uid://dbpmdtdyq1vpd" path="res://scripts/her.gd" id="13_mh8xb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qcd3b"]
texture = ExtResource("2_88iny")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
1:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
0:6/0 = 0
1:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSet" id="TileSet_88ety"]
sources/0 = SubResource("TileSetAtlasSource_qcd3b")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6w7d"]
size = Vector2(640, 67)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dw7u0"]
shader = ExtResource("6_y6vwp")
shader_parameter/resolution = Vector2(320, 180)
shader_parameter/scan_line_amount = 0.23
shader_parameter/warp_amount = 0.174
shader_parameter/vignette_amount = 0.669
shader_parameter/vignette_intensity = 0.3
shader_parameter/grille_amount = 0.111
shader_parameter/brightness_boost = 1.178

[sub_resource type="SystemFont" id="SystemFont_qjcqe"]
font_names = PackedStringArray("Public Pixel")

[sub_resource type="LabelSettings" id="LabelSettings_fyxdr"]
font = SubResource("SystemFont_qjcqe")
font_color = Color(1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_2y5yt"]
resource_name = "fade_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"transit"
}]
}

[sub_resource type="Animation" id="Animation_2os1m"]
resource_name = "fade_white"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2os1m"]
_data = {
&"fade_black": SubResource("Animation_2y5yt"),
&"fade_white": SubResource("Animation_2os1m")
}

[sub_resource type="SystemFont" id="SystemFont_j6w7d"]
font_names = PackedStringArray("Public Pixel")

[sub_resource type="LabelSettings" id="LabelSettings_x4b8f"]
font = SubResource("SystemFont_j6w7d")

[sub_resource type="SystemFont" id="SystemFont_m3r7s"]
font_names = PackedStringArray("Public Pixel")

[sub_resource type="LabelSettings" id="LabelSettings_dw7u0"]
font = SubResource("SystemFont_m3r7s")
font_size = 8
font_color = Color(1, 0.0588235, 0.266667, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmr53"]
size = Vector2(20, 262)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahbqi"]
size = Vector2(10, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpk0m"]
atlas = ExtResource("12_88iny")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs1vn"]
atlas = ExtResource("12_88iny")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_13hs1"]
atlas = ExtResource("12_88iny")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mh8xb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpk0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs1vn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13hs1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="Her" type="Node2D"]
script = ExtResource("1_3l61x")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD4/wIAAAABAAAAAAD5/wIAAAABAAAAAAD6/wIAAAABAAAAAAD7/wIAAAABAAAAAAD8/wIAAAABAAAAAAD9/wIAAAABAAAAAAD+/wIAAAABAAAAAAD//wIAAAABAAAAAAAAAAIAAAABAAAAAAABAAIAAAABAAAAAAACAAIAAAABAAAAAAADAAIAAAABAAAAAAAEAAIAAAABAAAAAAAFAAIAAAABAAAAAAAGAAIAAAABAAAAAAAHAAIAAAABAAAAAAAIAAIAAAABAAAAAAAJAAIAAAABAAAAAAAKAAIAAAABAAAAAAALAAIAAAABAAAAAAAMAAIAAAABAAAAAAD0/wIAAAABAAAAAAD1/wIAAAABAAAAAAD2/wIAAAABAAAAAAD3/wIAAAABAAAAAAANAAIAAAABAAAAAAAOAAIAAAABAAAAAAAPAAIAAAABAAAAAADz/wIAAAABAAAAAAAQAAIAAAABAAAAAADz/wMAAAABAAEAAAAQAAMAAAABAAEAAAD0/wMAAAABAAEAAAD1/wMAAAABAAEAAAD2/wMAAAABAAEAAAD3/wMAAAABAAEAAAD4/wMAAAABAAEAAAD5/wMAAAABAAEAAAD6/wMAAAABAAEAAAD7/wMAAAABAAEAAAD8/wMAAAABAAEAAAD9/wMAAAABAAEAAAD+/wMAAAABAAEAAAD//wMAAAABAAEAAAAAAAMAAAABAAEAAAABAAMAAAABAAEAAAACAAMAAAABAAEAAAADAAMAAAABAAEAAAAEAAMAAAABAAEAAAAFAAMAAAABAAEAAAAGAAMAAAABAAEAAAAHAAMAAAABAAEAAAAIAAMAAAABAAEAAAAJAAMAAAABAAEAAAAKAAMAAAABAAEAAAALAAMAAAABAAEAAAAMAAMAAAABAAEAAAANAAMAAAABAAEAAAAOAAMAAAABAAEAAAAPAAMAAAABAAEAAADs/wIAAAAAAAAAAAASAAIAAAABAAAAAAATAAIAAAACAAAAAAARAAIAAAABAAAAAADy/wIAAAABAAAAAADx/wIAAAABAAAAAADw/wIAAAABAAAAAADv/wIAAAABAAAAAADu/wIAAAABAAAAAADt/wIAAAABAAAAAADs/wMAAAABAAEAAADt/wMAAAABAAEAAADu/wMAAAABAAEAAADv/wMAAAABAAEAAADw/wMAAAABAAEAAADx/wMAAAABAAEAAADy/wMAAAABAAEAAAARAAMAAAABAAEAAAASAAMAAAABAAEAAAATAAMAAAABAAEAAADs/wQAAAABAAEAAADs/wUAAAABAAEAAADs/wYAAAABAAEAAADs/wcAAAABAAEAAADt/wQAAAABAAEAAADt/wUAAAABAAEAAADt/wYAAAABAAEAAADt/wcAAAABAAEAAADu/wQAAAABAAEAAADu/wUAAAABAAEAAADu/wYAAAABAAEAAADu/wcAAAABAAEAAADv/wQAAAABAAEAAADv/wUAAAABAAEAAADv/wYAAAABAAEAAADv/wcAAAABAAEAAADw/wQAAAABAAEAAADw/wUAAAABAAEAAADw/wYAAAABAAEAAADw/wcAAAABAAEAAADx/wQAAAABAAEAAADx/wUAAAABAAEAAADx/wYAAAABAAEAAADx/wcAAAABAAEAAADy/wQAAAABAAEAAADy/wUAAAABAAEAAADy/wYAAAABAAEAAADy/wcAAAABAAEAAADz/wQAAAABAAEAAADz/wUAAAABAAEAAADz/wYAAAABAAEAAADz/wcAAAABAAEAAAD0/wQAAAABAAEAAAD0/wUAAAABAAEAAAD0/wYAAAABAAEAAAD0/wcAAAABAAEAAAD1/wQAAAABAAEAAAD1/wUAAAABAAEAAAD1/wYAAAABAAEAAAD1/wcAAAABAAEAAAD2/wQAAAABAAEAAAD2/wUAAAABAAEAAAD2/wYAAAABAAEAAAD2/wcAAAABAAEAAAD3/wQAAAABAAEAAAD3/wUAAAABAAEAAAD3/wYAAAABAAEAAAD3/wcAAAABAAEAAAD4/wQAAAABAAEAAAD4/wUAAAABAAEAAAD4/wYAAAABAAEAAAD4/wcAAAABAAEAAAD5/wQAAAABAAEAAAD5/wUAAAABAAEAAAD5/wYAAAABAAEAAAD5/wcAAAABAAEAAAD6/wQAAAABAAEAAAD6/wUAAAABAAEAAAD6/wYAAAABAAEAAAD6/wcAAAABAAEAAAD7/wQAAAABAAEAAAD7/wUAAAABAAEAAAD7/wYAAAABAAEAAAD7/wcAAAABAAEAAAD8/wQAAAABAAEAAAD8/wUAAAABAAEAAAD8/wYAAAABAAEAAAD8/wcAAAABAAEAAAD9/wQAAAABAAEAAAD9/wUAAAABAAEAAAD9/wYAAAABAAEAAAD9/wcAAAABAAEAAAD+/wQAAAABAAEAAAD+/wUAAAABAAEAAAD+/wYAAAABAAEAAAD+/wcAAAABAAEAAAD//wQAAAABAAEAAAD//wUAAAABAAEAAAD//wYAAAABAAEAAAD//wcAAAABAAEAAAAAAAQAAAABAAEAAAAAAAUAAAABAAEAAAAAAAYAAAABAAEAAAAAAAcAAAABAAEAAAABAAQAAAABAAEAAAABAAUAAAABAAEAAAABAAYAAAABAAEAAAABAAcAAAABAAEAAAACAAQAAAABAAEAAAACAAUAAAABAAEAAAACAAYAAAABAAEAAAACAAcAAAABAAEAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAADAAYAAAABAAEAAAADAAcAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAAEAAYAAAABAAEAAAAEAAcAAAABAAEAAAAFAAQAAAABAAEAAAAFAAUAAAABAAEAAAAFAAYAAAABAAEAAAAFAAcAAAABAAEAAAAGAAQAAAABAAEAAAAGAAUAAAABAAEAAAAGAAYAAAABAAEAAAAGAAcAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAABAAEAAAAHAAYAAAABAAEAAAAHAAcAAAABAAEAAAAIAAQAAAABAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAAIAAcAAAABAAEAAAAJAAQAAAABAAEAAAAJAAUAAAABAAEAAAAJAAYAAAABAAEAAAAJAAcAAAABAAEAAAAKAAQAAAABAAEAAAAKAAUAAAABAAEAAAAKAAYAAAABAAEAAAAKAAcAAAABAAEAAAALAAQAAAABAAEAAAALAAUAAAABAAEAAAALAAYAAAABAAEAAAALAAcAAAABAAEAAAAMAAQAAAABAAEAAAAMAAUAAAABAAEAAAAMAAYAAAABAAEAAAAMAAcAAAABAAEAAAANAAQAAAABAAEAAAANAAUAAAABAAEAAAANAAYAAAABAAEAAAANAAcAAAABAAEAAAAOAAQAAAABAAEAAAAOAAUAAAABAAEAAAAOAAYAAAABAAEAAAAOAAcAAAABAAEAAAAPAAQAAAABAAEAAAAPAAUAAAABAAEAAAAPAAYAAAABAAEAAAAPAAcAAAABAAEAAAAQAAQAAAABAAEAAAAQAAUAAAABAAEAAAAQAAYAAAABAAEAAAAQAAcAAAABAAEAAAARAAQAAAABAAEAAAARAAUAAAABAAEAAAARAAYAAAABAAEAAAARAAcAAAABAAEAAAASAAQAAAABAAEAAAASAAUAAAABAAEAAAASAAYAAAABAAEAAAASAAcAAAABAAEAAAATAAQAAAABAAEAAAATAAUAAAABAAEAAAATAAYAAAABAAEAAAATAAcAAAABAAEAAADs/wgAAAABAAEAAADs/wkAAAABAAEAAADs/woAAAABAAEAAADs/wsAAAABAAEAAADs/wwAAAABAAEAAADs/w0AAAABAAEAAADs/w4AAAABAAEAAADs/w8AAAABAAEAAADs/xAAAAABAAEAAADs/xEAAAABAAEAAADs/xIAAAABAAEAAADt/wgAAAABAAEAAADt/wkAAAABAAEAAADt/woAAAABAAEAAADt/wsAAAABAAEAAADt/wwAAAABAAEAAADt/w0AAAABAAEAAADt/w4AAAABAAEAAADt/w8AAAABAAEAAADt/xAAAAABAAEAAADt/xEAAAABAAEAAADt/xIAAAABAAEAAADu/wgAAAABAAEAAADu/wkAAAABAAEAAADu/woAAAABAAEAAADu/wsAAAABAAEAAADu/wwAAAABAAEAAADu/w0AAAABAAEAAADu/w4AAAABAAEAAADu/w8AAAABAAEAAADu/xAAAAABAAEAAADu/xEAAAABAAEAAADu/xIAAAABAAEAAADv/wgAAAABAAEAAADv/wkAAAABAAEAAADv/woAAAABAAEAAADv/wsAAAABAAEAAADv/wwAAAABAAEAAADv/w0AAAABAAEAAADv/w4AAAABAAEAAADv/w8AAAABAAEAAADv/xAAAAABAAEAAADv/xEAAAABAAEAAADv/xIAAAABAAEAAADw/wgAAAABAAEAAADw/wkAAAABAAEAAADw/woAAAABAAEAAADw/wsAAAABAAEAAADw/wwAAAABAAEAAADw/w0AAAABAAEAAADw/w4AAAABAAEAAADw/w8AAAABAAEAAADw/xAAAAABAAEAAADw/xEAAAABAAEAAADw/xIAAAABAAEAAADx/wgAAAABAAEAAADx/wkAAAABAAEAAADx/woAAAABAAEAAADx/wsAAAABAAEAAADx/wwAAAABAAEAAADx/w0AAAABAAEAAADx/w4AAAABAAEAAADx/w8AAAABAAEAAADx/xAAAAABAAEAAADx/xEAAAABAAEAAADx/xIAAAABAAEAAADy/wgAAAABAAEAAADy/wkAAAABAAEAAADy/woAAAABAAEAAADy/wsAAAABAAEAAADy/wwAAAABAAEAAADy/w0AAAABAAEAAADy/w4AAAABAAEAAADy/w8AAAABAAEAAADy/xAAAAABAAEAAADy/xEAAAABAAEAAADy/xIAAAABAAEAAADz/wgAAAABAAEAAADz/wkAAAABAAEAAADz/woAAAABAAEAAADz/wsAAAABAAEAAADz/wwAAAABAAEAAADz/w0AAAABAAEAAADz/w4AAAABAAEAAADz/w8AAAABAAEAAADz/xAAAAABAAEAAADz/xEAAAABAAEAAADz/xIAAAABAAEAAAD0/wgAAAABAAEAAAD0/wkAAAABAAEAAAD0/woAAAABAAEAAAD0/wsAAAABAAEAAAD0/wwAAAABAAEAAAD0/w0AAAABAAEAAAD0/w4AAAABAAEAAAD0/w8AAAABAAEAAAD0/xAAAAABAAEAAAD0/xEAAAABAAEAAAD0/xIAAAABAAEAAAD1/wgAAAABAAEAAAD1/wkAAAABAAEAAAD1/woAAAABAAEAAAD1/wsAAAABAAEAAAD1/wwAAAABAAEAAAD1/w0AAAABAAEAAAD1/w4AAAABAAEAAAD1/w8AAAABAAEAAAD1/xAAAAABAAEAAAD1/xEAAAABAAEAAAD1/xIAAAABAAEAAAD2/wgAAAABAAEAAAD2/wkAAAABAAEAAAD2/woAAAABAAEAAAD2/wsAAAABAAEAAAD2/wwAAAABAAEAAAD2/w0AAAABAAEAAAD2/w4AAAABAAEAAAD2/w8AAAABAAEAAAD2/xAAAAABAAEAAAD2/xEAAAABAAEAAAD2/xIAAAABAAEAAAD3/wgAAAABAAEAAAD3/wkAAAABAAEAAAD3/woAAAABAAEAAAD3/wsAAAABAAEAAAD3/wwAAAABAAEAAAD3/w0AAAABAAEAAAD3/w4AAAABAAEAAAD3/w8AAAABAAEAAAD3/xAAAAABAAEAAAD3/xEAAAABAAEAAAD3/xIAAAABAAEAAAD4/wgAAAABAAEAAAD4/wkAAAABAAEAAAD4/woAAAABAAEAAAD4/wsAAAABAAEAAAD4/wwAAAABAAEAAAD4/w0AAAABAAEAAAD4/w4AAAABAAEAAAD4/w8AAAABAAEAAAD4/xAAAAABAAEAAAD4/xEAAAABAAEAAAD4/xIAAAABAAEAAAD5/wgAAAABAAEAAAD5/wkAAAABAAEAAAD5/woAAAABAAEAAAD5/wsAAAABAAEAAAD5/wwAAAABAAEAAAD5/w0AAAABAAEAAAD5/w4AAAABAAEAAAD5/w8AAAABAAEAAAD5/xAAAAABAAEAAAD5/xEAAAABAAEAAAD5/xIAAAABAAEAAAD6/wgAAAABAAEAAAD6/wkAAAABAAEAAAD6/woAAAABAAEAAAD6/wsAAAABAAEAAAD6/wwAAAABAAEAAAD6/w0AAAABAAEAAAD6/w4AAAABAAEAAAD6/w8AAAABAAEAAAD6/xAAAAABAAEAAAD6/xEAAAABAAEAAAD6/xIAAAABAAEAAAD7/wgAAAABAAEAAAD7/wkAAAABAAEAAAD7/woAAAABAAEAAAD7/wsAAAABAAEAAAD7/wwAAAABAAEAAAD7/w0AAAABAAEAAAD7/w4AAAABAAEAAAD7/w8AAAABAAEAAAD7/xAAAAABAAEAAAD7/xEAAAABAAEAAAD7/xIAAAABAAEAAAD8/wgAAAABAAEAAAD8/wkAAAABAAEAAAD8/woAAAABAAEAAAD8/wsAAAABAAEAAAD8/wwAAAABAAEAAAD8/w0AAAABAAEAAAD8/w4AAAABAAEAAAD8/w8AAAABAAEAAAD8/xAAAAABAAEAAAD8/xEAAAABAAEAAAD8/xIAAAABAAEAAAD9/wgAAAABAAEAAAD9/wkAAAABAAEAAAD9/woAAAABAAEAAAD9/wsAAAABAAEAAAD9/wwAAAABAAEAAAD9/w0AAAABAAEAAAD9/w4AAAABAAEAAAD9/w8AAAABAAEAAAD9/xAAAAABAAEAAAD9/xEAAAABAAEAAAD9/xIAAAABAAEAAAD+/wgAAAABAAEAAAD+/wkAAAABAAEAAAD+/woAAAABAAEAAAD+/wsAAAABAAEAAAD+/wwAAAABAAEAAAD+/w0AAAABAAEAAAD+/w4AAAABAAEAAAD+/w8AAAABAAEAAAD+/xAAAAABAAEAAAD+/xEAAAABAAEAAAD+/xIAAAABAAEAAAD//wgAAAABAAEAAAD//wkAAAABAAEAAAD//woAAAABAAEAAAD//wsAAAABAAEAAAD//wwAAAABAAEAAAD//w0AAAABAAEAAAD//w4AAAABAAEAAAD//w8AAAABAAEAAAD//xAAAAABAAEAAAD//xEAAAABAAEAAAD//xIAAAABAAEAAAAAAAgAAAABAAEAAAAAAAkAAAABAAEAAAAAAAoAAAABAAEAAAAAAAsAAAABAAEAAAAAAAwAAAABAAEAAAAAAA0AAAABAAEAAAAAAA4AAAABAAEAAAAAAA8AAAABAAEAAAAAABAAAAABAAEAAAAAABEAAAABAAEAAAAAABIAAAABAAEAAAABAAgAAAABAAEAAAABAAkAAAABAAEAAAABAAoAAAABAAEAAAABAAsAAAABAAEAAAABAAwAAAABAAEAAAABAA0AAAABAAEAAAABAA4AAAABAAEAAAABAA8AAAABAAEAAAABABAAAAABAAEAAAABABEAAAABAAEAAAABABIAAAABAAEAAAACAAgAAAABAAEAAAACAAkAAAABAAEAAAACAAoAAAABAAEAAAACAAsAAAABAAEAAAACAAwAAAABAAEAAAACAA0AAAABAAEAAAACAA4AAAABAAEAAAACAA8AAAABAAEAAAACABAAAAABAAEAAAACABEAAAABAAEAAAACABIAAAABAAEAAAADAAgAAAABAAEAAAADAAkAAAABAAEAAAADAAoAAAABAAEAAAADAAsAAAABAAEAAAADAAwAAAABAAEAAAADAA0AAAABAAEAAAADAA4AAAABAAEAAAADAA8AAAABAAEAAAADABAAAAABAAEAAAADABEAAAABAAEAAAADABIAAAABAAEAAAAEAAgAAAABAAEAAAAEAAkAAAABAAEAAAAEAAoAAAABAAEAAAAEAAsAAAABAAEAAAAEAAwAAAABAAEAAAAEAA0AAAABAAEAAAAEAA4AAAABAAEAAAAEAA8AAAABAAEAAAAEABAAAAABAAEAAAAEABEAAAABAAEAAAAEABIAAAABAAEAAAAFAAgAAAABAAEAAAAFAAkAAAABAAEAAAAFAAoAAAABAAEAAAAFAAsAAAABAAEAAAAFAAwAAAABAAEAAAAFAA0AAAABAAEAAAAFAA4AAAABAAEAAAAFAA8AAAABAAEAAAAFABAAAAABAAEAAAAFABEAAAABAAEAAAAFABIAAAABAAEAAAAGAAgAAAABAAEAAAAGAAkAAAABAAEAAAAGAAoAAAABAAEAAAAGAAsAAAABAAEAAAAGAAwAAAABAAEAAAAGAA0AAAABAAEAAAAGAA4AAAABAAEAAAAGAA8AAAABAAEAAAAGABAAAAABAAEAAAAGABEAAAABAAEAAAAGABIAAAABAAEAAAAHAAgAAAABAAEAAAAHAAkAAAABAAEAAAAHAAoAAAABAAEAAAAHAAsAAAABAAEAAAAHAAwAAAABAAEAAAAHAA0AAAABAAEAAAAHAA4AAAABAAEAAAAHAA8AAAABAAEAAAAHABAAAAABAAEAAAAHABEAAAABAAEAAAAHABIAAAABAAEAAAAIAAgAAAABAAEAAAAIAAkAAAABAAEAAAAIAAoAAAABAAEAAAAIAAsAAAABAAEAAAAIAAwAAAABAAEAAAAIAA0AAAABAAEAAAAIAA4AAAABAAEAAAAIAA8AAAABAAEAAAAIABAAAAABAAEAAAAIABEAAAABAAEAAAAIABIAAAABAAEAAAAJAAgAAAABAAEAAAAJAAkAAAABAAEAAAAJAAoAAAABAAEAAAAJAAsAAAABAAEAAAAJAAwAAAABAAEAAAAJAA0AAAABAAEAAAAJAA4AAAABAAEAAAAJAA8AAAABAAEAAAAJABAAAAABAAEAAAAJABEAAAABAAEAAAAJABIAAAABAAEAAAAKAAgAAAABAAEAAAAKAAkAAAABAAEAAAAKAAoAAAABAAEAAAAKAAsAAAABAAEAAAAKAAwAAAABAAEAAAAKAA0AAAABAAEAAAAKAA4AAAABAAEAAAAKAA8AAAABAAEAAAAKABAAAAABAAEAAAAKABEAAAABAAEAAAAKABIAAAABAAEAAAALAAgAAAABAAEAAAALAAkAAAABAAEAAAALAAoAAAABAAEAAAALAAsAAAABAAEAAAALAAwAAAABAAEAAAALAA0AAAABAAEAAAALAA4AAAABAAEAAAALAA8AAAABAAEAAAALABAAAAABAAEAAAALABEAAAABAAEAAAALABIAAAABAAEAAAAMAAgAAAABAAEAAAAMAAkAAAABAAEAAAAMAAoAAAABAAEAAAAMAAsAAAABAAEAAAAMAAwAAAABAAEAAAAMAA0AAAABAAEAAAAMAA4AAAABAAEAAAAMAA8AAAABAAEAAAAMABAAAAABAAEAAAAMABEAAAABAAEAAAAMABIAAAABAAEAAAANAAgAAAABAAEAAAANAAkAAAABAAEAAAANAAoAAAABAAEAAAANAAsAAAABAAEAAAANAAwAAAABAAEAAAANAA0AAAABAAEAAAANAA4AAAABAAEAAAANAA8AAAABAAEAAAANABAAAAABAAEAAAANABEAAAABAAEAAAANABIAAAABAAEAAAAOAAgAAAABAAEAAAAOAAkAAAABAAEAAAAOAAoAAAABAAEAAAAOAAsAAAABAAEAAAAOAAwAAAABAAEAAAAOAA0AAAABAAEAAAAOAA4AAAABAAEAAAAOAA8AAAABAAEAAAAOABAAAAABAAEAAAAOABEAAAABAAEAAAAOABIAAAABAAEAAAAPAAgAAAABAAEAAAAPAAkAAAABAAEAAAAPAAoAAAABAAEAAAAPAAsAAAABAAEAAAAPAAwAAAABAAEAAAAPAA0AAAABAAEAAAAPAA4AAAABAAEAAAAPAA8AAAABAAEAAAAPABAAAAABAAEAAAAPABEAAAABAAEAAAAPABIAAAABAAEAAAAQAAgAAAABAAEAAAAQAAkAAAABAAEAAAAQAAoAAAABAAEAAAAQAAsAAAABAAEAAAAQAAwAAAABAAEAAAAQAA0AAAABAAEAAAAQAA4AAAABAAEAAAAQAA8AAAABAAEAAAAQABAAAAABAAEAAAAQABEAAAABAAEAAAAQABIAAAABAAEAAAARAAgAAAABAAEAAAARAAkAAAABAAEAAAARAAoAAAABAAEAAAARAAsAAAABAAEAAAARAAwAAAABAAEAAAARAA0AAAABAAEAAAARAA4AAAABAAEAAAARAA8AAAABAAEAAAARABAAAAABAAEAAAARABEAAAABAAEAAAARABIAAAABAAEAAAASAAgAAAABAAEAAAASAAkAAAABAAEAAAASAAoAAAABAAEAAAASAAsAAAABAAEAAAASAAwAAAABAAEAAAASAA0AAAABAAEAAAASAA4AAAABAAEAAAASAA8AAAABAAEAAAASABAAAAABAAEAAAASABEAAAABAAEAAAASABIAAAABAAEAAAATAAgAAAABAAEAAAATAAkAAAABAAEAAAATAAoAAAABAAEAAAATAAsAAAABAAEAAAATAAwAAAABAAEAAAATAA0AAAABAAEAAAATAA4AAAABAAEAAAATAA8AAAABAAEAAAATABAAAAABAAEAAAATABEAAAABAAEAAAATABIAAAABAAEAAADs/wEAAAABAAYAAADs/wAAAAABAAYAAADs////AAABAAYAAADs//7/AAABAAYAAADs//3/AAABAAYAAADs//z/AAABAAYAAADs//v/AAABAAYAAADs//r/AAABAAYAAADs//n/AAABAAYAAADs//j/AAABAAYAAADs//f/AAABAAYAAADs//b/AAABAAYAAADs//X/AAABAAYAAADs//T/AAABAAYAAADs//P/AAABAAYAAADt//b/AAACAAUAAADu//b/AAACAAUAAADv//b/AAACAAUAAADw//b/AAACAAUAAADx//b/AAACAAUAAADy//b/AAACAAUAAADz//b/AAACAAUAAAD0//b/AAACAAUAAAD1//b/AAACAAUAAAD2//b/AAACAAUAAAD3//b/AAACAAUAAAD4//b/AAACAAUAAAD5//b/AAACAAUAAAD6//b/AAACAAUAAAD7//b/AAACAAUAAAD8//b/AAACAAUAAAD9//b/AAACAAUAAAD+//b/AAACAAUAAAD///b/AAACAAUAAAAAAPb/AAACAAUAAAABAPb/AAACAAUAAAACAPb/AAACAAUAAAADAPb/AAACAAUAAAAEAPb/AAACAAUAAAAFAPb/AAACAAUAAAAGAPb/AAACAAUAAAAHAPb/AAACAAUAAAAIAPb/AAACAAUAAAAJAPb/AAACAAUAAAAKAPb/AAACAAUAAAALAPb/AAACAAUAAAAMAPb/AAACAAUAAAANAPb/AAACAAUAAAAOAPb/AAACAAUAAAAPAPb/AAACAAUAAAAQAPb/AAACAAUAAAARAPb/AAACAAUAAAASAPb/AAACAAUAAAATAPb/AAADAAYAAAATAAEAAAADAAYAAAATAAAAAAADAAYAAAATAP//AAADAAYAAAATAP7/AAADAAYAAAATAP3/AAADAAYAAAATAPz/AAADAAYAAAATAPv/AAADAAYAAAATAPr/AAADAAYAAAATAPn/AAADAAYAAAATAPj/AAADAAYAAAATAPf/AAADAAYAAAATAPX/AAADAAYAAAATAPT/AAADAAYAAADv//f/AAADAAYAAADv//j/AAADAAYAAADv//n/AAADAAYAAADv//r/AAADAAYAAADv//v/AAADAAYAAADv//z/AAADAAYAAADv//3/AAADAAYAAADv//7/AAADAAYAAADv////AAADAAYAAADv/wAAAAADAAYAAADv/wEAAAADAAYAAADy/wEAAAADAAYAAADy/wAAAAADAAYAAADy////AAADAAYAAADy//7/AAADAAYAAADy//3/AAADAAYAAADy//z/AAADAAYAAADy//v/AAADAAYAAADy//r/AAADAAYAAADy//n/AAADAAYAAADy//j/AAADAAYAAADy//f/AAADAAYAAAD1//f/AAADAAYAAAD1//j/AAADAAYAAAD1//n/AAADAAYAAAD1//r/AAADAAYAAAD1//v/AAADAAYAAAD1//z/AAADAAYAAAD1//3/AAADAAYAAAD1//7/AAADAAYAAAD1////AAADAAYAAAD1/wAAAAADAAYAAAD1/wEAAAADAAYAAAD4/wEAAAADAAYAAAD4/wAAAAADAAYAAAD4////AAADAAYAAAD4//7/AAADAAYAAAD4//3/AAADAAYAAAD4//z/AAADAAYAAAD4//v/AAADAAYAAAD4//r/AAADAAYAAAD4//n/AAADAAYAAAD4//j/AAADAAYAAAD4//f/AAADAAYAAAD7//f/AAADAAYAAAD7//j/AAADAAYAAAD7//n/AAADAAYAAAD7//r/AAADAAYAAAD7//v/AAADAAYAAAD7//z/AAADAAYAAAD7//3/AAADAAYAAAD7//7/AAADAAYAAAD7////AAADAAYAAAD7/wAAAAADAAYAAAD7/wEAAAADAAYAAAD+/wEAAAADAAYAAAD+/wAAAAADAAYAAAD+////AAADAAYAAAD+//7/AAADAAYAAAD+//3/AAADAAYAAAD+//z/AAADAAYAAAD+//v/AAADAAYAAAD+//r/AAADAAYAAAD+//n/AAADAAYAAAD+//j/AAADAAYAAAD+//f/AAADAAYAAAABAPf/AAADAAYAAAABAPj/AAADAAYAAAABAPn/AAADAAYAAAABAPr/AAADAAYAAAABAPv/AAADAAYAAAABAPz/AAADAAYAAAABAP3/AAADAAYAAAABAP7/AAADAAYAAAABAP//AAADAAYAAAABAAAAAAADAAYAAAABAAEAAAADAAYAAAAEAAEAAAADAAYAAAAEAAAAAAADAAYAAAAEAP//AAADAAYAAAAEAP7/AAADAAYAAAAEAP3/AAADAAYAAAAEAPz/AAADAAYAAAAEAPv/AAADAAYAAAAEAPr/AAADAAYAAAAEAPn/AAADAAYAAAAEAPj/AAADAAYAAAAEAPf/AAADAAYAAAAHAPf/AAADAAYAAAAHAPj/AAADAAYAAAAHAPn/AAADAAYAAAAHAPr/AAADAAYAAAAHAPv/AAADAAYAAAAHAPz/AAADAAYAAAAHAP3/AAADAAYAAAAHAP7/AAADAAYAAAAHAP//AAADAAYAAAAHAAAAAAADAAYAAAAHAAEAAAADAAYAAAAKAAEAAAADAAYAAAAKAAAAAAADAAYAAAAKAP//AAADAAYAAAAKAP7/AAADAAYAAAAKAP3/AAADAAYAAAAKAPz/AAADAAYAAAAKAPv/AAADAAYAAAAKAPr/AAADAAYAAAAKAPn/AAADAAYAAAAKAPj/AAADAAYAAAAKAPf/AAADAAYAAAANAPf/AAADAAYAAAANAPj/AAADAAYAAAANAPn/AAADAAYAAAANAPr/AAADAAYAAAANAPv/AAADAAYAAAANAPz/AAADAAYAAAANAP3/AAADAAYAAAANAP7/AAADAAYAAAANAP//AAADAAYAAAANAAAAAAADAAYAAAANAAEAAAADAAYAAAAQAAEAAAADAAYAAAAQAAAAAAADAAYAAAAQAP//AAADAAYAAAAQAP7/AAADAAYAAAAQAP3/AAADAAYAAAAQAPz/AAADAAYAAAAQAPv/AAADAAYAAAAQAPr/AAADAAYAAAAQAPn/AAADAAYAAAAQAPj/AAADAAYAAAAQAPf/AAADAAYAAAA=")
tile_set = SubResource("TileSet_88ety")

[node name="PrimaryCamera" type="Camera2D" parent="."]
script = ExtResource("3_mh8xb")

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="Player" parent="." instance=ExtResource("4_86c2d")]
position = Vector2(-305, -255)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, 65)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_j6w7d")

[node name="ScreenEffect" type="CanvasLayer" parent="."]
script = ExtResource("5_utaye")

[node name="ColorRect2" type="ColorRect" parent="ScreenEffect"]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0)

[node name="ColorRect" type="ColorRect" parent="ScreenEffect"]
material = SubResource("ShaderMaterial_dw7u0")
offset_right = 640.0
offset_bottom = 360.0

[node name="LevelName" type="Label" parent="ScreenEffect"]
offset_left = 249.0
offset_top = 154.0
offset_right = 393.0
offset_bottom = 177.0
text = "REJECTI🖤N

BY   LOKA"
label_settings = SubResource("LabelSettings_fyxdr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenEffect"]
libraries = {
&"": SubResource("AnimationLibrary_2os1m")
}

[node name="Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelName" type="Label" parent="Interface"]
visible = false
layout_mode = 0
offset_left = -304.0
offset_top = -166.0
offset_right = -160.0
offset_bottom = -143.0
text = "REJECTI🖤N"
label_settings = SubResource("LabelSettings_x4b8f")

[node name="Dialogue" type="Control" parent="Interface"]
layout_mode = 3
anchors_preset = 0
offset_left = 83.0
offset_top = -164.0
offset_right = 123.0
offset_bottom = -124.0
script = ExtResource("7_5sxh6")

[node name="DialogueSound" type="AudioStreamPlayer" parent="Interface/Dialogue"]
stream = ExtResource("8_oqkbv")

[node name="d1" type="Label" parent="Interface/Dialogue"]
layout_mode = 0
offset_left = 2.0
offset_top = 10.0
offset_right = 226.0
offset_bottom = 33.0
text = "HEY HONEY,"
label_settings = ExtResource("9_0h4it")

[node name="d2" type="Label" parent="Interface/Dialogue"]
layout_mode = 0
offset_left = 2.0
offset_top = 37.0
offset_right = 226.0
offset_bottom = 60.0
text = "..."
label_settings = ExtResource("9_0h4it")

[node name="d3" type="Label" parent="Interface/Dialogue"]
layout_mode = 0
offset_left = 2.0
offset_top = 63.0
offset_right = 226.0
offset_bottom = 86.0
text = "CAN WE GET BACK TOGETHER?"
label_settings = ExtResource("9_0h4it")

[node name="d4" type="Label" parent="Interface/Dialogue"]
layout_mode = 0
offset_left = 2.0
offset_top = 121.0
offset_right = 226.0
offset_bottom = 144.0
text = "NO."
label_settings = SubResource("LabelSettings_dw7u0")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(-331, 62)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(0, -121)
shape = SubResource("RectangleShape2D_tmr53")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(330, 62)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(0, -121)
shape = SubResource("RectangleShape2D_tmr53")

[node name="Door" parent="." instance=ExtResource("10_shsup")]
visible = false
position = Vector2(292, 15)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-152, 21)

[node name="Checkpoint1" type="Area2D" parent="Node2D"]
position = Vector2(-109, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Checkpoint1"]
position = Vector2(5, -5.5)
shape = SubResource("RectangleShape2D_ahbqi")

[node name="Checkpoint2" type="Area2D" parent="Node2D"]
position = Vector2(13, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Checkpoint2"]
position = Vector2(5, -5.5)
shape = SubResource("RectangleShape2D_ahbqi")

[node name="Checkpoint3" type="Area2D" parent="Node2D"]
position = Vector2(160, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Checkpoint3"]
position = Vector2(5, -5.5)
shape = SubResource("RectangleShape2D_ahbqi")

[node name="Checkpoint4" type="Area2D" parent="Node2D"]
position = Vector2(348, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Checkpoint4"]
position = Vector2(5, -5.5)
shape = SubResource("RectangleShape2D_ahbqi")

[node name="SecretControl" type="Node2D" parent="."]
script = ExtResource("11_0rpx2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(218, 23)
sprite_frames = SubResource("SpriteFrames_mh8xb")
autoplay = "default"
frame_progress = 0.205101
script = ExtResource("13_mh8xb")

[connection signal="transit_to_next_scene" from="." to="ScreenEffect" method="_on_her_transit_to_next_scene"]
[connection signal="body_entered" from="Door" to="ScreenEffect" method="_on_door_body_entered"]
[connection signal="body_entered" from="Door" to="SecretControl" method="_on_door_body_entered"]
[connection signal="body_entered" from="Node2D/Checkpoint1" to="Interface/Dialogue" method="_on_checkpoint_1_body_entered"]
[connection signal="body_entered" from="Node2D/Checkpoint2" to="Interface/Dialogue" method="_on_checkpoint_2_body_entered"]
[connection signal="body_entered" from="Node2D/Checkpoint3" to="Interface/Dialogue" method="_on_checkpoint_3_body_entered"]
[connection signal="body_entered" from="Node2D/Checkpoint4" to="Interface/Dialogue" method="_on_checkpoint_4_body_entered"]
[connection signal="body_entered" from="Node2D/Checkpoint4" to="AnimatedSprite2D" method="_on_checkpoint_4_body_entered"]
